@@ -3,6 +3,9 @@ Changelog
 
 9.1-dev - (unreleased)
 ----------------------
+* Feature: formated_provenance now contain the acronym information extracted
+  from the title of the data source if found within parenthesis
+  [ichim-david refs #21467]
 
 9.0 - (2014-10-01)
 ------------------
